--- a/application.properties
+++ b/application.properties
@@ -8,8 +8,8 @@ eureka.instance.hostname=localhost
 
 # Payment Servive endpoints
 #microeservice.payment-service.endpoints.endpoint.uri=http://PAYMENT-SERVICE/payment/dopayment
-microeservice.payment-service.endpoints[0].uri=http://PAYMENT-SERVICE/payment/dopayment
-microeservice.payment-service.endpoints[1].uri=http://PAYMENT-SERVICE/payment/dopayment1
+microeservice.payment-service.endpoints.endpoint.uri=http://PAYMENT-SERVICE/payment/dopayment
+microeservice.payment-service.endpoints.endpoint1.uri=http://PAYMENT-SERVICE/payment/dopayment1
 
 # Order Servive endpoints
 microeservice.order-service.endpoints.endpoint.uri=http://ORDER-SERVICE/order/bookorder
