--- a/application.properties
+++ b/application.properties
@@ -9,7 +9,7 @@ eureka.instance.hostname=localhost
 # Payment Servive endpoints
 #microeservice.payment-service.endpoints.endpoint.uri=http://PAYMENT-SERVICE/payment/dopayment
 microeservice.payment-service.endpoints.endpoint.uri=http://PAYMENT-SERVICE/payment/dopayment
-microeservice.payment-service.endpoints.endpoint.uri=http://PAYMENT-SERVICE/payment/dopayment1
+#microeservice.payment-service.endpoints.endpoint.uri=http://PAYMENT-SERVICE/payment/dopayment1
 
 # Order Servive endpoints
 microeservice.order-service.endpoints.endpoint.uri=http://ORDER-SERVICE/order/bookorder
